*** empty log message ***

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+- Bug: htdocs/feeds.php o=json
+	Apparenty num_read, num_unread is always null.
+- Bug: db_get_all_feed_counts() sometimes returns negative value for
+  latest_pub_date, latest_update.
 - Bug?: There are some old articles in the database. Why aren't they
   being cleaned out properly?
 	db_update_feed() only cleans out whichever feed it was called
